sjengida/c2/check_legal
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/check_legal/src/moves.c:741:8: error: use of undeclared identifier 'dword_66759C'
v42 = &dword_66759C[bking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/check_legal/src/moves.c:903:8: error: use of undeclared identifier 'dword_66759C'
v32 = &dword_66759C[wking_loc]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/check_legal/src/obj/moves.o] Error 1
